@@ -81,7 +81,7 @@
 	
 #^/wrap-crs-add	<!--	CRS WRAPPER	-->
 	<div class="wrap_crs_add">
-		<div class="header_section sticky collapsable">crs add{_it./crs-add/channel-code&&_it:/channel-code||}</div>
+		<div class="header_section sticky collapsable">crs add</div>
 		<table class="budget sortable">
 			<thead>
 				<tr>
@@ -91,12 +91,10 @@
 					<th class="crs_desc" data-sort="string" data-sort-multicolumn="0,1,2,3">DESCRIPTION</th>
 				</tr>
 			</thead>
+			{_it./crs-add/channel-code&&_it:/channel-code||}
 			{_it./crs-add/other-flags:/other-flags}
 		</table>
 	</div>
-	
-#^/channel-code
-<div class="crs_channel_code"><span>CHANNEL CODE</span> {_it./crs-add/channel-code-name}</div>
 
 #^/other-flags	<!--	CRS	OTHER FLAGS ROWS	-->
 <tr class="row_count">
@@ -106,20 +104,28 @@
 	<td class="crs_desc" data-sort-value="{_it.@code-description}">{_it.@code-description||}</td>
 </tr>
 
+#^/channel-code	<!--	CRS	OTHER FLAGS ROWS	-->
+<tr class="row_count">
+	<td class="crs_ele" data-sort-value="{_it.@code-name}">Channel Code</td>
+	<td class="crs_code" data-sort-value="{_it.@code-name}">{_it./crs-add/channel-code-name}</td>
+	<td class="crs_sig" data-sort-value="{_it.@significance}">{_it.@significance||}</td>
+	<td class="crs_desc" data-sort-value="{_it.@code-description}">{_it.@code-description||}</td>
+</tr>
+
 #^/loan-status/year
-<div class="wrap_crs"><div class="crs_head">CRS-ADD YEAR</div>{_it./crs-add/loan-status@year}</div>
+<div class="wrap_crs"><div class="crs_head">YEAR</div>{_it./crs-add/loan-status@year}</div><!--
 
 #^/loan-status/interest-received
-<div class="wrap_crs"><div class="crs_head">INTEREST</div>{_it./crs-add/loan-status/interest-received} <span>{_it./crs-add/loan-status@currency}</span></div>
+--><div class="wrap_crs"><div class="crs_head">INTEREST</div>{_it./crs-add/loan-status/interest-received} <span>{_it./crs-add/loan-status@currency}</span></div><!--
 
 #^/loan-status/principal-outstanding
-<div class="wrap_crs"><div class="crs_head">PRINCIPAL OUTSTANDING</div>{_it./crs-add/loan-status/principal-outstanding} <span>{_it./crs-add/loan-status@currency}</span></div>
+--><div class="wrap_crs"><div class="crs_head">PRINCIPAL OUTSTANDING</div>{_it./crs-add/loan-status/principal-outstanding} <span>{_it./crs-add/loan-status@currency}</span></div><!--
 
 #^/loan-status/principal-arrears
-<div class="wrap_crs"><div class="crs_head">PRINCIPAL ARREARS</div>{_it./crs-add/loan-status/principal-arrears} <span>{_it./crs-add/loan-status@currency}</span></div>
+--><div class="wrap_crs"><div class="crs_head">PRINCIPAL ARREARS</div>{_it./crs-add/loan-status/principal-arrears} <span>{_it./crs-add/loan-status@currency}</span></div><!--
 
 #^/loan-status/interest-arrears
-<div class="wrap_crs"><div class="crs_head">INTEREST ARREARS</div>{_it./crs-add/loan-status/interest-arrears} <span>{_it./crs-add/loan-status@currency}</span></div>
+--><div class="wrap_crs"><div class="crs_head">INTEREST ARREARS</div>{_it./crs-add/loan-status/interest-arrears} <span>{_it./crs-add/loan-status@currency}</span></div><!--
 
 #^/wrap-conditions	<!--	CONDITIONS WRAPPER	-->
 	<div class="wrap_conditions">
