@@ -4,6 +4,7 @@ Add crs-add
 Display crs-add elements
 Update css for new elements
 Removed text bracket from crs channel-code
+Fix whitespace crs loan status
 
 
 Development Portal (2020-02-07 shi)
